add: Endpoints de Votacao, Resultado e atualização do Swagger
