# backend/src/main/java/dev/emanuelm/votacao/dto/SessaoResultadoDTO.java
@@ -1,0 +1,11 @@
+package dev.emanuelm.votacao.dto;
+
+public record SessaoResultadoDTO(
+    String sessaoUuid,
+    String dataAbertura,
+    String dataFechamento,
+    PautaResponseDTO pauta,
+    ResultadoDTO resultado
+) {
+
+}
